--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,18 @@
     {% block title %}{% endblock %}
 </head>
 <body class="bg-white">
+
+    {% comment %} <div id="popup" class="min-h-screen flex flex-col items-center justify-center ">
+        <div class="sm:mx-auto sm:w-full sm:max-w-md text-center">
+            <span class="fixed text-4xl font-extrabold text-gray-900 sm:text-5xl">
+                fsdff sdf sdf
+            </span>
+        </div>
+    </div> {% endcomment %}
     {% if message %}
     <div id="popup" class="min-h-screen flex flex-col justify-center py-12 sm:px-6 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-md text-center">
-            <span class="fixed text-4xl font-extrabold text-gray-900 sm:text-5xl">
+            <span class="text-4xl font-extrabold text-gray-900 sm:text-5xl">
                 {{ message }}
             </span>
         </div>
